scripts: Adapt sign-app.sh script so it can sign with HSM
Change-Id: I0e3ceb9e202516773e1883b410c1f6c1e8b66185